fixed spacing on home events

--- a/src/sass/components/_components.home-events.scss
+++ b/src/sass/components/_components.home-events.scss
@@ -44,7 +44,7 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            margin: $inuit-global-spacing-unit $inuit-global-spacing-unit-small 2*$inuit-global-spacing-unit;
+            margin: $inuit-global-spacing-unit-small $inuit-global-spacing-unit-small 2*$inuit-global-spacing-unit;
             @media screen and (max-width: 1220px) {
                 //display: ;
             }
